# movies

./: .env  Cargo.toml
.cargo/: config.toml
.github/workflows/: default.yaml
config/: base.yaml  env.yaml
scripts/: init_db.sh
src/: config.rs  database.rs  globals.rs  lib.rs  main.rs  router.rs  server.rs  telematry.rs  utility.rs
src/app/: mod.rs  state.rs
src/models/: environment.rs  error.rs  mod.rs  settings.rs
src/routes/: server.rs
tests/api/: helper.rs  main.rs  server.rs
