[package]
name = "movies"
version = "0.1.0"
edition = "2021"

[dependencies]

thiserror = "1.0.0"
anyhow = "1.0.0"

serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.1"

chrono = "0.4.0"
config = { version = "0.14.0", features = ["yaml"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry", "fmt", "chrono"]  }
tracing-log = "0.2.0"

tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"]  }
tower-http = { version = "0.6.1", features = ["trace"]  }
axum = "0.7.7"
