[package]
name = "movies"
version = "0.1.0"
edition = "2021"

[dependencies]

thiserror = "1.0.0"
anyhow = "1.0.0"

serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.1"

chrono = "0.4.0"
config = { version = "0.14.0", features = ["yaml"] }
uuid = { version = "1.10.0", features = ["v4"] }

secrecy = { version = "0.10.2", features = ["serde"] }
once_cell = "1.20.0"
typed-builder = "0.20.0"

listenfd = "=0.3.5"

sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
  "derive",
  "migrate",
  "uuid",
  "chrono",
] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
  "fmt",
  "chrono",
] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"

tower-http = { version = "0.6.1", features = [
  "trace",
  "timeout",
  "request-id",
] }
tokio = { version = "1.40.0", features = [
  "macros",
  "signal",
  "rt-multi-thread",
] }
tower = { version = "0.5.1", features = ["full"] }
axum = "0.7.7"
tower-service = "0.3.3"

[dev-dependencies]
claims = "0.7.1"
